.kubernetes/weremain/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: weremainfund
  namespace: weremainfund
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: weremainfund
    spec:
      containers:
      - image: #gcr.io/google_containers/echoserver:1.0
        imagePullPolicy: Always
        name: weremainfund
        ports:
        - containerPort: 4200
