.kubernetes/weremain/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  type: NodePort
  ports:
    - port: 4200
      name: http
