.kubernetes/weremain/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tls
spec:
  tls:
  - hosts:
    - weremainfund.org
    - www.weremainfund.org
    secretName: weremain-cert
  backend:
    serviceName: weremainfund
    servicePort: 4200
